# mdpkm

./: .env.json  .gitignore  .gitmodules  .hintrc  README.md  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.js  vite.config.tauri.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  tauri.yml
public/: index.css  manifest.json  uiblox.css
public/font/: bootstrap-icons.css
public/font/Nunito/: index.css
src/: enums.ts  index.css  index.jsx  main.jsx  main.ts  mdpkm.jsx  plugins.ts  types.ts  voxura.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  redirect.html
src/common/: api.js  constants.js  dataController.js  instances.js  java.js  msStore.js  store.js  util.js  util.jsx  voxura.ts
src/common/api/: index.js
src/common/lib/: EventEmitter.js
src/common/plugins/: api.js  index.js  loader.js  loader.ts  patcher.js  plugin.ts  system.js  util.ts
src/common/slices/: accounts.js  instances.js  settings.js  skins.js
src/components/: Accounts.jsx  App.jsx  BrowserLink.jsx  Header.jsx  ImagePreview.jsx  ImportInstance.jsx  Instance.jsx  InstanceExport.jsx  InstanceIcon.jsx  InstanceList.jsx  InstanceMod.jsx  InstancePage.jsx  LoaderSetup.jsx  Mod.jsx  ModManagement.jsx  ModSearch.jsx  Modal.jsx  Modpack.jsx  ModpackListPage.jsx  ModpackSearch.jsx  ModpackSetup.jsx  News.jsx  ResourcePackManagement.jsx  SelectInstanceType.jsx  Server.jsx  ServerManagement.jsx  Settings.jsx  SkinFrame.jsx  SkinList.jsx  SkinManagement.jsx  Tag.jsx  Toast.jsx  Toggle.jsx
src/components/Pages/: Item.jsx  index.jsx
src/components/Transition/: Image.jsx  Text.jsx  index.jsx
src/components/uiblox/: Accordion.jsx  App.jsx  BasicSpinner.jsx  Button.jsx  Card.jsx  Grid.jsx  Header.jsx  Image.jsx  Link.jsx  Main.jsx  Navigation.jsx  SpanEditable.jsx  Spinner.jsx  Table.jsx  Tabs.jsx  Toggle.jsx  Typography.jsx  WindowButtons.jsx
src/interface/: index.tsx
src/interface/components/: App.tsx  AppUpdate.tsx  Avatar.tsx  BrowserLink.tsx  EulaDialog.tsx  FileSelect.tsx  Header.tsx  HomePost.tsx  ImagePreview.tsx  ImageWrapper.tsx  ImportInstance.jsx  Instance.tsx  InstanceComponent.tsx  InstanceExport.jsx  InstanceIcon.tsx  InstanceList.tsx  InstanceMod.tsx  IrisShaders.tsx  JavaServerSettings.tsx  JsonEditor.tsx  LaunchError.tsx  LoadingInstances.tsx  Markdown.tsx  MicrosoftBlocker.tsx  Mod.tsx  ModManagement.jsx  ModManagement.tsx  ModSearch.tsx  Modal.tsx  Modpack.jsx  ModpackSearch.jsx  ModpackSetup.jsx  PluginManagement.tsx  ResourcePackManagement.tsx  Server.jsx  Server.tsx  ServerManagement.tsx  ServerProperties.tsx  Shader.tsx  SkinFrame.tsx  (+6 more)
src/interface/pages/: accounts.tsx  create.tsx  developer.tsx  downloads.jsx  downloads.tsx  home.tsx  import.tsx  instanceSplash.jsx  instances.tsx  modSearch.tsx  navigation.tsx  search.tsx  settings.tsx  skins.tsx
src/localization/: index.js  index.ts  strings.js
src/mdpkm/: index.ts  platform.ts
src/mdpkm/instance-creator/: fabric-loader.tsx  index.ts  minecraft-fabric.tsx  minecraft-java-client.tsx  minecraft-java-server.ts  (+5 more)
src/pages/: accounts.jsx  downloads.jsx  home.jsx  index.js  instanceSplash.jsx  instances.jsx  navigation.jsx  settings.jsx  skins.jsx  uhoh.jsx
src/plugins/: index.ts  patcher.ts  plugin.ts
src/store/: hooks.ts  index.ts
src/util/: constants.ts  hooks.tsx  index.tsx  joi.ts
(+59 files in other folders)
