[package]
name = "mdpkm"
version = "2.0.0-beta.3"
description = "A Tauri App"
authors = ["Blookers"]
license = ""
repository = ""
default-run = "mdpkm"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0.89"
sysinfo = "0.27.0"
walkdir = "2.3.2"
futures = "0.3.25"
voxura = { path = "../voxura/rust" }
serde = { version = "1.0.149", features = ["derive"] }
tauri = { version = "1.2.2", features = ["clipboard-write-text", "dialog-open", "dialog-save", "fs-all", "http-multipart", "http-request", "os-all", "path-all", "process-exit", "protocol-asset", "shell-execute", "shell-open", "updater", "window-close", "window-create", "window-maximize", "window-minimize", "window-set-focus", "window-start-dragging", "window-unmaximize"] }
zip = "0.6.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
