[package]
name = "mdpkm"
version = "2.0.0-beta.7"
description = "Simple all-in-one application for Minecraft"

license = "MIT"
authors = ["Blookers"]
homepage = "https://github.com/Blookerss/mdpkm#readme"
repository = "https://github.com/Blookerss/mdpkm"

edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
zip = "0.6.3"
serde = { version = "1.0.152", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-write-text", "dialog-open", "dialog-save", "fs-all", "http-multipart", "http-request", "os-all", "path-all", "process-exit", "protocol-asset", "shell-execute", "shell-open", "updater", "window-close", "window-create", "window-maximize", "window-minimize", "window-set-focus", "window-start-dragging", "window-unmaximize"] }
voxura = { path = "../voxura/rust" }
walkdir = "2.3.2"
sysinfo = "0.27.7"
futures = "0.3.25"
fs_extra = "1.2.0"
serde_json = "1.0.91"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
